Cache uploaded files, so they don't need to be redownloaded